--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>JSDizzy</title>
     <style type = "text/css">
         html, body {
-            margin: 0px;
+            overflow: hidden;
             background: #111111;
         }
         canvas {
