--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>JSDizzy</title>
     <style type = "text/css">
         html, body {
+            margin: 0px auto;
+            display: block;
             overflow: hidden;
             background: #111111;
         }
