Center the Canvas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             background: #111111;
         }
         canvas {
+            margin: 0px auto;
             display: block;
             background: #111111;
         }
